<resources>
    <string name="app_name">Pomdot1</string>
    <string name="title_map">Map</string>
    <string name="title_devices">Devices</string>
    <string name="title_settings">Settings</string>
    <string name="title_devicescan">Device Scan</string>
    <string name="connect_new">Connect New Pomdot</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="no_devices_connected">No Devices Connected</string>
    <string name="none"></string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="cancel">Cancel</string>
    <string name="rescan">Rescan</string>
    <string name="scanning">Scanning</string>
    <string name="no_location_results">No Location Results</string>
    <string name="time_since_last_location_update">Time Since Last Location Update: </string>
    <string name="battery_remaining">Battery Remaining: </string>
</resources>