<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <action android:id="@+id/action_global_navigation_map"
        app:destination="@id/navigation_map"/>

    <action android:id="@+id/action_global_navigation_devices"
        app:destination="@id/navigation_devices"/>

    <action android:id="@+id/action_global_navigation_settings"
        app:destination="@id/navigation_settings"/>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.pomdot1.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.example.pomdot1.ui.devices.DevicesFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices">
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.pomdot1.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>