<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.deviceslist.DevicesListFragment"
    android:layout_gravity="center"
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/device_scan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/title_devicescan"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devicescan_rec_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/device_scan_title"
        android:layout_alignBottom="@+id/device_scan_buttons"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="15dp"/>

    <LinearLayout
        android:id="@+id/device_scan_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp">

        <Button
            android:id="@+id/btn_rescan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanning"
            android:enabled="false"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="20dp"/>
    </LinearLayout>





</RelativeLayout>